@@ -229,6 +229,12 @@ protected:
   void NotifyEnergyRecharged (void);
 
   /**
+   * This function notifies all DeviceEnergyModel of energy changed event. It
+   * is called by the child EnergySource class when energy source is changed.
+   */
+  void NotifyEnergyChanged (void);
+
+  /**
    * This function is called to break reference cycle between EnergySource and
    * DeviceEnergyModel. Child of the EnergySource base class must call this
    * function in their implementation of DoDispose to make sure the reference
